fix: add the missing border-radius into the box

--- a/src/Components/General/Box/Box.scss
+++ b/src/Components/General/Box/Box.scss
@@ -1,8 +1,7 @@
-
-
 .box {
   padding-inline: 18px;
   padding-block: 20px;
+  border-radius: 5px;
   box-sizing: border-box;
   width: 100%;
 
